<resources>
    <string name="app_name">MyEmotions</string>
    <string name="my_emotions">MY EMOTIONS</string>
    <string name="smileylauncher">SmileyLauncher</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="more">More</string>
    <string name="maps">Maps</string>
    <string name="background_image">Background Image</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_name">User Name</string>
    <string name="emailicon">emailIcon</string>
    <string name="passwordicon">passwordIcon</string>
    <string name="usernameicon">usernameIcon</string>
    <string name="facebookloginbutton">FacebookLoginButton</string>
    <string name="googleloginbutton">googleLoginButton</string>
    <string name="twitterloginbutton">twitterLoginButton</string>
    <string name="plus_button_to_open_gallery_or_camera">Plus Button to Open gallery or Camera</string>
    <string name="selected_image_viewer">Selected Image Viewer</string>
    <string name="camera_button">camera button</string>
    <string name="open_gallery_button">open gallery button</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="emotionsimageview">emotionsImageView</string>
    <string name="mood_visibility_spinner_text">Mood Visibility Spinner</string>
    <string name="my_friends">My Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="remove_friends">Remove Friends</string>
    <string name="launcher">launcher</string>
</resources>